--- a/zuul-core/build.gradle
+++ b/zuul-core/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     compile 'com.netflix.servo:servo-core:0.4.44'
     compile 'com.netflix.netflix-commons:netflix-commons-util:0.1.1'
 
+    compile 'com.netflix.rxjava:rxjava-core:0.16.0'
+//    compile group: 'com.netflix.rxjava', name: 'rxjava-groovy', version:"${netflixRxjavaRev}", force: true
+
     provided 'junit:junit-dep:4.10'
     provided 'javax.servlet:servlet-api:2.5'
 
