--- a/rxnetty-load-generator/build.gradle
+++ b/rxnetty-load-generator/build.gradle
@@ -4,10 +4,6 @@ apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
-//apply plugin: 'jetty'
-
-
-// com.netflix.rxjava:rxjava-core:0.16.0
 
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
@@ -22,7 +18,6 @@ dependencies {
     
     compile 'log4j:log4j:1.2.17'
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
-    //compile 'org.apache.httpcomponents:httpclient:4.2.2'
 
     compile 'io.netty:netty-handler:4.0.14.Final'
     compile 'io.netty:netty-codec-http:4.0.14.Final'
@@ -32,9 +27,8 @@ dependencies {
     //provided 'javax.servlet:servlet-api:2.5'
 
     // using local copy of rxnetty until it is public (plus dependencies)
-    //compile files('lib/rx-netty-0.3.1.jar')
-    compile files('lib/rx-netty-0.3.4.jar')
-    compile files('lib/numerus-1.2-SNAPSHOT.jar')
+    compile files('../rxnetty-lib/rx-netty-0.3.4.jar')
+    compile files('../rxnetty-lib/numerus-1.2-SNAPSHOT.jar')
 }
 
 eclipse {
@@ -55,9 +49,10 @@ idea {
 }
 
 
-mainClassName = "com.netflix.zuul.rxnetty.StartServer"
+mainClassName = "com.netflix.rxnetty.loadgen.Main"
 
-
+/*
 applicationDistribution.from("src/main/filters") {
     into "scripts"
 }
+*/
