--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name='zuul'
 
-include 'zuul-core', 'zuul-simple-webapp', 'zuul-netflix', 'zuul-scripts', 'zuul-netflix-webapp', 'zuul-rxnetty-webapp'
+include 'zuul-core', 'zuul-simple-webapp', 'zuul-netflix', 'zuul-scripts', 'zuul-netflix-webapp', 'zuul-rxnetty-webapp', 'rxnetty-load-generator'
