--- a/zuul-core/build.gradle
+++ b/zuul-core/build.gradle
@@ -10,10 +10,12 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
 
     compile 'com.netflix.archaius:archaius-core:0.5.11'
-    compile 'com.netflix.servo:servo-core:0.4.44'
+//    compile 'com.netflix.servo:servo-core:0.4.44'
+    compile 'com.netflix.servo:servo-core:0.5.5'
     compile 'com.netflix.netflix-commons:netflix-commons-util:0.1.1'
 
-    compile 'com.netflix.rxjava:rxjava-core:0.16.0'
+//    compile 'com.netflix.rxjava:rxjava-core:0.16.0'
+      compile 'com.netflix.rxjava:rxjava-core:0.17.4'
 //    compile group: 'com.netflix.rxjava', name: 'rxjava-groovy', version:"${netflixRxjavaRev}", force: true
 
     provided 'junit:junit-dep:4.10'
