--- a/zuul-simple-webapp/build.gradle
+++ b/zuul-simple-webapp/build.gradle
@@ -12,7 +12,8 @@ dependencies {
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
     compile 'org.apache.httpcomponents:httpclient:4.2.2'
     
-    provided 'junit:junit-dep:4.10'
+    //provided 'junit:junit-dep:4.10'
+    compile 'junit:junit-dep:4.10'
     provided 'javax.servlet:servlet-api:2.5'
 }
 
