--- a/zuul-rxnetty-webapp/src/main/resources/log4j.properties
+++ b/zuul-rxnetty-webapp/src/main/resources/log4j.properties
@@ -1,7 +1,9 @@
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=INFO, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 #log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p %c %m%n
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} [%t] %p %c %m%n
 
-log4j.logger.org.apache.http=INFO
+log4j.logger.com.netflix.zuul2=DEBUG
+log4j.logger.com.netflix.zuul.rxnetty=DEBUG
+
